[tool.poetry]
name = "Androxus"
version = "3.0.0a"
description = "An open source bot made in python"
authors = ["Rafael"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.26.0"
colorama = "^0.4.5"
"discord.py" = "^2.0.1"
jishaku = "^2.5.1"
python-dotenv = "^0.20.0"
python-stopwatch2 = "^1.1.1"
SQLAlchemy = "^1.4.40"
tabulate = "^0.8.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
mypy = "^0.971"
flake8 = "^5.0.4"
types-colorama = "^0.4.15"
types-toml = "^0.10.8"
types-tabulate = "^0.8.11"
isort = "^5.10.1"
sqlalchemy2-stubs = "^0.0.2-alpha.26"
taskipy = "^1.10.2"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = "310"

[tool.mypy]
namespace_packages = "True"
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.yapf]
based_on_style = "facebook"
indent_width = 4

[tool.taskipy.tasks]
lint = { cmd = "task mypy && task flake8", help = "Run mypy and flake8 on the project" }
format = { cmd = "task yapf && task isort", help = "Run yapf and isort on the project" }
mypy = { cmd = "mypy --pretty .", help = "Run mypy on the project" }
flake8 = { cmd = "flake8 --benchmark .", help = "Run flake8 on the project" }
yapf = { cmd = "yapf -r -i -vv .", help = "Run yapf on the project" }
isort = { cmd = "isort .", help = "Run isort on the project" }
